fix issue were cover art doesn't show, increase line height - some text got cut off

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -2,9 +2,9 @@ body {
   background: #fff;
   color: #333;
   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Garuda, Verdana, Tahoma, sans-serif;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 1.2;
   width: 250px;
 }
 
@@ -47,7 +47,7 @@ body {
 }
 
 .songinfo div:not(:last-of-type) {
-  margin: 0 0 10px;
+  margin: 0 0 5px;
 }
 
 .controls {
